--- a/gss_client/package.json
+++ b/gss_client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gss_client",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,6 +13,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "socket.io-client": "^2.5.0"
   }
 }
